# 3D_triangles

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README-R.md  README.md  answ
.cache/clangd/index/: AABB.hpp.E0818F43AD6F55EE.idx  BVH.hpp.B757979D234A7922.idx  cmp.hpp.782D7A5945AD2A96.idx  colors.hpp.794B0317349AAD22.idx  driver.cpp.B0920314F1E09846.idx  driver.hpp.CA69C28AA532DC2C.idx  geometry_tests.cpp.81CED2EF98860A22.idx  line.hpp.FE3D31C23B8210B6.idx  main.cpp.0E776ECD90361149.idx  node.hpp.23FA1593A270FD3A.idx  point.hpp.7AAB81A90B79D113.idx  triangle.hpp.68B1E0B3A7DBCCF3.idx  triangles_tests.cpp.FC96998122732346.idx  vector.hpp.CBDEA7172B8C9C60.idx
.github/workflows/: ci.yml
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-debug/tests/: Makefile  cmake_install.cmake  geometry[1]_include.cmake
common/: cmp.hpp  colors.hpp
dump/: graph_dump.gv
include/: driver.hpp  geometry.hpp  graphics_driver.hpp  triangle.hpp
include/BVH/: AABB.hpp  BVH.hpp  node.hpp
include/common/: cmp.hpp  colors.hpp
include/graphics/: camera.hpp  glfw_guard.hpp  graphics_driver.hpp  mesh.hpp  shader_program.hpp  shaders.hpp  utils.hpp  vertex_obj.hpp  window.hpp
include/intersection/: point_to_segment.hpp  point_to_triangle.hpp  segment_to_segment.hpp  segment_to_triangle.hpp  triangle_to_triangle.hpp  triangle_to_triangle_2d.hpp
include/primitives/: interval.hpp  line.hpp  point.hpp  polygon.hpp  triangle.hpp  vector.hpp
src/: BVH.cpp  driver.cpp  geometry.cpp  main.cpp  main_graphics.cpp
tests/: CMakeLists.txt  geometry_tests.cpp  triangles_tests.cpp
tests/BVH/: CMakeLists.txt
tests/BVH/src/: AABB.cpp  BVH.cpp  node.cpp
tests/answ/: 3.res  4.res
tests/end_to_end/: end_to_end.sh
tests/intersection/: CMakeLists.txt
tests/intersection/src/: triangle_to_triangle.cpp  triangle_to_triangle_2d.cpp
tests/primitives/: CMakeLists.txt
tests/primitives/src/: line.cpp  point.cpp  triangle.cpp  vector.cpp
